[build-system] 
requires = ["setuptools", "wheel"] 
build-backend = "setuptools.build_meta" 
[project] 
name = "sagittal_average" 
version = "0.1.0" 
description = "A Python package for sagittal averaging" 
authors = [{name = "Your Name", email = "your.email@example.com"}] 
license = "MIT" 
dependencies = [] 
